k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acie
  labels:
    name: acie
    environment: production
